force-app/main/default/objects/Proforma_Invoice__c/Proforma_Invoice__c.object-meta.xml
<CustomObject>
    <label>Proforma Invoice</label>
    <nameField>
        <displayFormat>I - {000000}</displayFormat>
        <label>Proforma Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proforma Invoice</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>