force-app/main/default/objects/Proforma_Invoice__c/fields/Building_No_Street__c.field-meta.xml
<CustomField>
    <fullName>Building_No_Street__c</fullName>
    <label>Building No. &amp; Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>