force-app/main/default/objects/Proforma_Invoice__c/fields/CGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount__c</fullName>
    <formula>IF( OR(State__c == &apos;Telangana&apos;,State__c == &apos;telangana&apos;,State__c == &apos;TELANGANA&apos;) , Total_Charges__c * CGST__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>