force-app/main/default/objects/Proforma_Invoice__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <defaultValue>&quot;5. Delivery: 1 to2 weeks.&quot;</defaultValue>
    <label>Delivery</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>