force-app/main/default/objects/Proforma_Invoice__c/fields/Forwarding__c.field-meta.xml
<CustomField>
    <fullName>Forwarding__c</fullName>
    <defaultValue>&quot;2. Forwarding :Included.&quot;</defaultValue>
    <label>Forwarding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>