force-app/main/default/objects/Proforma_Invoice__c/fields/Forwarding_Charges__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Charges__c</fullName>
    <defaultValue>0.01</defaultValue>
    <label>Forwarding Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>