force-app/main/default/objects/Proforma_Invoice__c/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <defaultValue>&quot;6. Freight: To pay basis.&quot;</defaultValue>
    <label>Freight</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>