force-app/main/default/objects/Proforma_Invoice__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <label>From Address</label>
    <type>TextArea</type>
</CustomField>