force-app/main/default/objects/Proforma_Invoice__c/fields/Grand_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grand_Amount__c</fullName>
    <formula>Total_Charges__c  +   GST_Amount__c +  Insurance_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>