force-app/main/default/objects/Proforma_Invoice__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <defaultValue>0.18</defaultValue>
    <label>IGST%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>