force-app/main/default/objects/Proforma_Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <displayFormat>Inv-{0000000}</displayFormat>
    <label>Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>