force-app/main/default/objects/Proforma_Invoice__c/fields/Machine_Name__c.field-meta.xml
<CustomField>
    <fullName>Machine_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machine Name</label>
    <referenceTo>Products__c</referenceTo>
    <relationshipLabel>Product</relationshipLabel>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>