force-app/main/default/objects/Proforma_Invoice__c/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orders</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Proforma Invoice</relationshipLabel>
    <relationshipName>Proforma_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>