force-app/main/default/objects/Proforma_Invoice__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <defaultValue>&quot;4. Payment: 50% as advance along with your purchase Order and balance 50% against proforma invoice prior to dispatch. (All the payments should be drawn in favour of RICETECH Machinery India Pvt.Ltd.Payble at Hyderabad.)&quot;</defaultValue>
    <label>Payment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>