force-app/main/default/objects/Proforma_Invoice__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>&quot;1. Price :Ex-our works, at Hyderabad.&quot;</defaultValue>
    <label>Price</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>