force-app/main/default/objects/Proforma_Invoice__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>Quotes__c</referenceTo>
    <relationshipLabel>Proforma Invoice (Quotation)</relationshipLabel>
    <relationshipName>Proforma_Invoice1</relationshipName>
    <type>Lookup</type>
</CustomField>