force-app/main/default/objects/Proforma_Invoice__c/fields/Quotes__c.field-meta.xml
<CustomField>
    <fullName>Quotes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotion Line Item</label>
    <referenceTo>Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Proforma Invoice</relationshipLabel>
    <relationshipName>Proforma_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>