force-app/main/default/objects/Proforma_Invoice__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <defaultValue>&quot;3. Sales Tax :Included.&quot;</defaultValue>
    <label>Sales Tax</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>