force-app/main/default/objects/Proforma_Invoice__c/fields/Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges__c</fullName>
    <formula>Sub_Total__c   +   Forwarding_Charges_Amount__c   +   Commissioning_Charges__c    + Packing_Charges_Amount__c</formula>
    <label>Total Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>