force-app/main/default/objects/Proforma_Invoice__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <defaultValue>&quot;8. Validity: This PROFORMA INVOICE is valid for 15 days, unless extended.&quot;</defaultValue>
    <label>Validity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>