force-app/main/default/objects/Proforma_Invoice__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <defaultValue>&quot;7. Warranty: We accept responsibilities of manufacturing defects only for a period of One year from the date of delivery.&quot;</defaultValue>
    <label>Warranty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>