force-app/main/default/objects/Proforma_Invoice__c/listViews/Custom_View.listView-meta.xml
<ListView>
    <fullName>Custom_View</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Quotation__c</columns>
    <columns>Orders__c</columns>
    <columns>State__c</columns>
    <columns>GST__c</columns>
    <columns>GST_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>Custom View</label>
</ListView>